Fixed table overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -232,7 +232,7 @@ body.light .star {
 
 .grid-header {
     display: grid;
-    grid-template-columns: 1.5fr 1fr 1.5fr 1fr 0.2fr;
+    grid-template-columns: 0.7fr 0.7fr 0.9fr 0.8fr 0.7fr;
     gap: 1px;
     background: rgba(255, 255, 255, 0.2);
     font-weight: bold;
@@ -243,7 +243,7 @@ body.light .star {
 
 .grid-row {
     display: grid;
-    grid-template-columns: 1.5fr 1fr 1.5fr 1fr 0.2fr;
+    grid-template-columns: 0.7fr 0.7fr 0.9fr 0.8fr 0.7fr;
     gap: 1px;
     align-items: center;
     /*background: rgba(255, 255, 255, 0.05);*/
@@ -258,7 +258,7 @@ body.light .star {
 .grid-cell {
     padding: 12px 16px;
     word-wrap: break-word;
-    overflow-wrap: break-word;
+    overflow: auto;
 }
 
 .header-cell {
